--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -58,6 +58,17 @@
             </div>
         </div>
 
+        <div class="form-group">
+            <label>{{localize "DICESONICE.speed"}}</label>
+            <select name="speed" style="flex: 1;">
+                {{#select speed}}
+                {{#each speedList as |name key|}}
+                <option value="{{key}}">{{name}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
+        </div>
+
         <div class="form-group" style="margin-top: 20px;">
             <button type="submit" name="submit">
                 <i class="fas fa-save"></i> {{localize "DICESONICE.Save"}}
