- fix issues on gmroll/blindroll/selfroll - move the setting button under the Dice So Nice section - adds the possibility to change the frame rate to improve performances in less powerful machines

--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -69,6 +69,14 @@
             </select>
         </div>
 
+        <div class="form-group">
+            <label>{{localize "DICESONICE.fps"}}</label>
+            <div class="form-fields">
+                <input type="range" name="fps" data-dtype="Number" value="{{fps}}" min="10" max="60" step="10">
+                <span class="range-value">{{fps}}</span>
+            </div>
+        </div>
+
         <div class="form-group" style="margin-top: 20px;">
             <button type="submit" name="submit">
                 <i class="fas fa-save"></i> {{localize "DICESONICE.Save"}}
