--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -1,6 +1,5 @@
 <div class="tab active" data-tab="general">
-    <div id="dice-gonfiguration-canvas" style="width: 335px; height: 250px"></div>
-
+    <div id="dice-gonfiguration-canvas" style="width: 500px; height: 300px"></div>
     <form autocomplete="off" class="dice-so-nice">
 
         <div class="form-group">
@@ -8,6 +7,18 @@
             <input type="checkbox" name="enabled" data-dtype="Boolean" {{checked enabled}}/>
         </div>
 
+        <div class="form-group">
+            <label>{{localize "DICESONICE.colorset"}}</label>
+            <select name="colorset" style="flex: 1;">
+                {{#select colorset}}
+                {{#each colorsetList as |name key|}}
+                <option value="{{key}}">{{name}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
+            <p class="notes">{{localize "DICESONICE.colorsetDesc"}}</p>
+        </div>
+        
         <div class="form-group">
             <label>{{localize "DICESONICE.labelColor"}}</label>
             <div class="form-fields">
@@ -22,6 +33,25 @@
                 <input type="text" name="diceColor" value="{{diceColor}}" data-dtype="String"/>
                 <input type="color" value="{{diceColor}}" data-edit="diceColor"/>
             </div>
+        </div>
+
+        <div class="form-group">
+            <label>{{localize "DICESONICE.outlineColor"}}</label>
+            <div class="form-fields">
+                <input type="text" name="outlineColor" value="{{outlineColor}}" data-dtype="String"/>
+                <input type="color" value="{{outlineColor}}" data-edit="outlineColor"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label>{{localize "DICESONICE.texture"}}</label>
+            <select name="texture" style="flex: 1;">
+                {{#select texture}}
+                {{#each textureList as |name key|}}
+                <option value="{{key}}">{{name}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
         </div>
 
         <div class="form-group">
@@ -46,6 +76,11 @@
         </div>
 
         <div class="form-group">
+            <label>{{localize "DICESONICE.sounds"}}</label>
+            <input type="checkbox" name="sounds" data-dtype="Boolean" {{checked sounds}}/>
+        </div>
+
+        <div class="form-group">
             <label>{{localize "DICESONICE.autoSize"}}</label>
             <input type="checkbox" name="autoscale" data-dtype="Boolean" {{checked autoscale}}/>
         </div>
@@ -56,6 +91,17 @@
                 <input type="range" name="scale" value="{{scale}}" min="20" max="100" step="1" data-dtype="Number">
                 <span class="range-value">{{scale}}</span>
             </div>
+        </div>
+
+        <div class="form-group">
+            <label>{{localize "DICESONICE.shadowQuality"}}</label>
+            <select name="shadowQuality" style="flex: 1;">
+                {{#select shadowQuality}}
+                {{#each shadowQualityList as |name key|}}
+                <option value="{{key}}">{{name}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
         </div>
 
         <div class="form-group">
@@ -72,10 +118,6 @@
         <div class="form-group" style="margin-top: 20px;">
             <button type="submit" name="submit">
                 <i class="fas fa-save"></i> {{localize "DICESONICE.Save"}}
-            </button>
-
-            <button type="button" name="apply">
-                <i class="fas fa-sync"></i> {{localize "DICESONICE.Apply"}}
             </button>
         </div>
 
