- Fixed toggle size update. - Aesthetic improvements of disabled properties. - Added metal and wood textures.

--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -23,7 +23,7 @@
             <label>{{localize "DICESONICE.labelColor"}}</label>
             <div class="form-fields">
                 <input type="text"  name="labelColor" value="{{labelColor}}" data-dtype="String"/>
-                <input type="color" value="{{labelColor}}" data-edit="labelColor"/>
+                <input type="color" name="labelColorSelector" value="{{labelColor}}" data-edit="labelColor"/>
             </div>
         </div>
 
@@ -31,7 +31,7 @@
             <label>{{localize "DICESONICE.diceColor"}}</label>
             <div class="form-fields">
                 <input type="text" name="diceColor" value="{{diceColor}}" data-dtype="String"/>
-                <input type="color" value="{{diceColor}}" data-edit="diceColor"/>
+                <input type="color" name="diceColorSelector" value="{{diceColor}}" data-edit="diceColor"/>
             </div>
         </div>
 
@@ -39,7 +39,7 @@
             <label>{{localize "DICESONICE.outlineColor"}}</label>
             <div class="form-fields">
                 <input type="text" name="outlineColor" value="{{outlineColor}}" data-dtype="String"/>
-                <input type="color" value="{{outlineColor}}" data-edit="outlineColor"/>
+                <input type="color" name="outlineColorSelector" value="{{outlineColor}}" data-edit="outlineColor"/>
             </div>
         </div>
 
