--- a/module/style.css
+++ b/module/style.css
@@ -3,6 +3,6 @@
     color: #bab8af;
 }
 
-.dice-so-nice input[type=range]:disabled {
-    opacity: 0.4;
+.dice-so-nice input[type=range]:disabled, .dice-so-nice input[type=color]:disabled {
+    opacity: 0.3;
 }
