--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -55,6 +55,14 @@
         </div>
 
         <div class="form-group">
+            <label>{{localize "DICESONICE.edgeColor"}}</label>
+            <div class="form-fields">
+                <input type="text" name="edgeColor" value="{{edgeColor}}" data-dtype="String"/>
+                <input type="color" name="edgeColorSelector" value="{{edgeColor}}" data-edit="edgeColor"/>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label>{{localize "DICESONICE.texture"}}</label>
             <select name="texture" style="flex: 1;">
                 {{#select texture}}
