--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -115,6 +115,17 @@
         </div>
 
         <div class="form-group">
+            <label>{{localize "DICESONICE.soundsSurface"}}</label>
+            <select name="soundsSurface" style="flex: 1;">
+                {{#select soundsSurface}}
+                {{#each soundsSurfaceList as |name key|}}
+                <option value="{{key}}">{{name}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
+        </div>
+
+        <div class="form-group">
             <label>{{localize "DICESONICE.autoSize"}}</label>
             <input type="checkbox" name="autoscale" data-dtype="Boolean" {{checked autoscale}}/>
         </div>
