--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -1,182 +1,183 @@
 <div class="tab active" data-tab="general">
-    <div id="dice-configuration-canvas" style="width: 500px; height: 245px"></div>
+    <div id="dice-configuration-canvas"></div>
     <form autocomplete="off" class="dice-so-nice">
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.enable"}}</label>
-            <input type="checkbox" name="enabled" data-dtype="Boolean" {{checked enabled}}/>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.system"}}</label>
-            <select name="system" style="flex: 1;">
-                {{#select system}}
-                {{#each systemList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.colorset"}}</label>
-            <select name="colorset" style="flex: 1;">
-                {{#select colorset}}
-                {{#each colorsetList as |group key|}}
-                <optgroup label="{{key}}">
-                    {{#each group as |name id|}}
-                    <option value="{{id}}">{{name}}</option>
+        <div class="dsn-settings-container">
+            <div class="form-group">
+                <label>{{localize "DICESONICE.enable"}}</label>
+                <input type="checkbox" name="enabled" data-dtype="Boolean" {{checked enabled}}/>
+            </div>
+            <h2>{{localize "DICESONICE.settingsAppearance"}}</h2>
+            <div class="form-group">
+                <label>{{localize "DICESONICE.system"}}</label>
+                <select name="system">
+                    {{#select system}}
+                    {{#each systemList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
                     {{/each}}
-                </optgroup>
-                {{/each}}
-                {{/select}}
-            </select>
-            <p class="notes">{{localize "DICESONICE.colorsetDesc"}}</p>
-        </div>
+                    {{/select}}
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label>{{localize "DICESONICE.texture"}}</label>
-            <select name="texture" style="flex: 1;">
-                {{#select texture}}
-                {{#each textureList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
+            <div class="form-group">
+                <label>{{localize "DICESONICE.colorset"}}</label>
+                <select name="colorset">
+                    {{#select colorset}}
+                    {{#each colorsetList as |group key|}}
+                    <optgroup label="{{key}}">
+                        {{#each group as |name id|}}
+                        <option value="{{id}}">{{name}}</option>
+                        {{/each}}
+                    </optgroup>
+                    {{/each}}
+                    {{/select}}
+                </select>
+                <p class="notes">{{localize "DICESONICE.colorsetDesc"}}</p>
+            </div>
 
-        <div class="form-group">
-            <label>{{localize "DICESONICE.material"}}</label>
-            <select name="material" style="flex: 1;">
-                {{#select material}}
-                {{#each materialList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
-        
-        <div class="form-group">
-            <label>{{localize "DICESONICE.labelColor"}}</label>
-            <div class="form-fields">
-                <input type="text"  name="labelColor" value="{{labelColor}}" data-dtype="String"/>
-                <input type="color" name="labelColorSelector" value="{{labelColor}}" data-edit="labelColor"/>
+            <div class="form-group">
+                <label>{{localize "DICESONICE.texture"}}</label>
+                <select name="texture">
+                    {{#select texture}}
+                    {{#each textureList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.material"}}</label>
+                <select name="material">
+                    {{#select material}}
+                    {{#each materialList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+            
+            <div class="form-group">
+                <label>{{localize "DICESONICE.labelColor"}}</label>
+                <div class="form-fields">
+                    <input type="text"  name="labelColor" value="{{labelColor}}" data-dtype="String"/>
+                    <input type="color" name="labelColorSelector" value="{{labelColor}}" data-edit="labelColor"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.diceColor"}}</label>
+                <div class="form-fields">
+                    <input type="text" name="diceColor" value="{{diceColor}}" data-dtype="String"/>
+                    <input type="color" name="diceColorSelector" value="{{diceColor}}" data-edit="diceColor"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.outlineColor"}}</label>
+                <div class="form-fields">
+                    <input type="text" name="outlineColor" value="{{outlineColor}}" data-dtype="String"/>
+                    <input type="color" name="outlineColorSelector" value="{{outlineColor}}" data-edit="outlineColor"/>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.edgeColor"}}</label>
+                <div class="form-fields">
+                    <input type="text" name="edgeColor" value="{{edgeColor}}" data-dtype="String"/>
+                    <input type="color" name="edgeColorSelector" value="{{edgeColor}}" data-edit="edgeColor"/>
+                </div>
+            </div>
+            <h2>{{localize "DICESONICE.settingsPlayerPreferences"}}</h2>
+            <div class="form-group">
+                <label>{{localize "DICESONICE.hideAfterRoll"}}</label>
+                <input type="checkbox" name="hideAfterRoll" data-dtype="Boolean" {{checked hideAfterRoll}}/>
+            </div>
+
+            <div class="form-group setting-timeBeforeHide">
+                <label>{{localize "DICESONICE.timeBeforeHide"}}</label>
+                <input type="text" name="timeBeforeHide" value="{{timeBeforeHide}}">
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.hideFX"}}</label>
+                <select name="hideFX">
+                    {{#select hideFX}}
+                    {{#each fxList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.sounds"}}</label>
+                <input type="checkbox" name="sounds" data-dtype="Boolean" {{checked sounds}}/>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.soundsSurface"}}</label>
+                <select name="soundsSurface">
+                    {{#select soundsSurface}}
+                    {{#each soundsSurfaceList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.autoSize"}}</label>
+                <input type="checkbox" name="autoscale" data-dtype="Boolean" {{checked autoscale}}/>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.size"}}</label>
+                <div class="form-fields">
+                    <input type="range" name="scale" value="{{scale}}" min="20" max="100" step="1" data-dtype="Number">
+                    <span class="range-value">{{scale}}</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.speed"}}</label>
+                <select name="speed">
+                    {{#select speed}}
+                    {{#each speedList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.canvasZIndex"}}</label>
+                <select name="canvasZIndex">
+                    {{#select canvasZIndex}}
+                    {{#each canvasZIndexList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+            <h2>{{localize "DICESONICE.settingsPerformance"}}</h2>
+            <div class="form-group">
+                <label>{{localize "DICESONICE.shadowQuality"}}</label>
+                <select name="shadowQuality">
+                    {{#select shadowQuality}}
+                    {{#each shadowQualityList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.bumpMapping"}}</label>
+                <input type="checkbox" name="bumpMapping" data-dtype="Boolean" {{checked bumpMapping}}/>
             </div>
         </div>
 
-        <div class="form-group">
-            <label>{{localize "DICESONICE.diceColor"}}</label>
-            <div class="form-fields">
-                <input type="text" name="diceColor" value="{{diceColor}}" data-dtype="String"/>
-                <input type="color" name="diceColorSelector" value="{{diceColor}}" data-edit="diceColor"/>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.outlineColor"}}</label>
-            <div class="form-fields">
-                <input type="text" name="outlineColor" value="{{outlineColor}}" data-dtype="String"/>
-                <input type="color" name="outlineColorSelector" value="{{outlineColor}}" data-edit="outlineColor"/>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.edgeColor"}}</label>
-            <div class="form-fields">
-                <input type="text" name="edgeColor" value="{{edgeColor}}" data-dtype="String"/>
-                <input type="color" name="edgeColorSelector" value="{{edgeColor}}" data-edit="edgeColor"/>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.hideAfterRoll"}}</label>
-            <input type="checkbox" name="hideAfterRoll" data-dtype="Boolean" {{checked hideAfterRoll}}/>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.timeBeforeHide"}}</label>
-            <input type="text" name="timeBeforeHide" value="{{timeBeforeHide}}" style="flex: 1; text-align: right;">
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.hideFX"}}</label>
-            <select name="hideFX" style="flex: 1;">
-                {{#select hideFX}}
-                {{#each fxList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.sounds"}}</label>
-            <input type="checkbox" name="sounds" data-dtype="Boolean" {{checked sounds}}/>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.soundsSurface"}}</label>
-            <select name="soundsSurface" style="flex: 1;">
-                {{#select soundsSurface}}
-                {{#each soundsSurfaceList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.autoSize"}}</label>
-            <input type="checkbox" name="autoscale" data-dtype="Boolean" {{checked autoscale}}/>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.size"}}</label>
-            <div class="form-fields">
-                <input type="range" name="scale" value="{{scale}}" min="20" max="100" step="1" data-dtype="Number">
-                <span class="range-value">{{scale}}</span>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.shadowQuality"}}</label>
-            <select name="shadowQuality" style="flex: 1;">
-                {{#select shadowQuality}}
-                {{#each shadowQualityList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.bumpMapping"}}</label>
-            <input type="checkbox" name="bumpMapping" data-dtype="Boolean" {{checked bumpMapping}}/>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.speed"}}</label>
-            <select name="speed" style="flex: 1;">
-                {{#select speed}}
-                {{#each speedList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>{{localize "DICESONICE.canvasZIndex"}}</label>
-            <select name="canvasZIndex" style="flex: 1;">
-                {{#select canvasZIndex}}
-                {{#each canvasZIndexList as |name key|}}
-                <option value="{{key}}">{{name}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
-
-        <div class="form-group" style="margin-top: 20px;">
+        <div class="form-group buttons-save">
             <button type="button" name="reset">
                 <i class="fas fa-refresh"></i> {{localize "DICESONICE.Reset"}}
             </button>
