--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -115,6 +115,14 @@
             </div>
 
             <div class="form-group">
+                <label>{{localize "DICESONICE.soundsVolume"}}</label>
+                <div class="form-fields">
+                    <input type="range" name="soundsVolume" value="{{soundsVolume}}" min="0.1" max="1" step="0.1" data-dtype="Number">
+                    <span class="range-value">{{soundsVolume}}</span>
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label>{{localize "DICESONICE.soundsSurface"}}</label>
                 <select name="soundsSurface">
                     {{#select soundsSurface}}
