--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -167,6 +167,17 @@
                     {{/select}}
                 </select>
             </div>
+
+            <div class="form-group">
+                <label>{{localize "DICESONICE.throwingForce"}}</label>
+                <select name="throwingForce">
+                    {{#select throwingForce}}
+                    {{#each throwingForceList as |name key|}}
+                    <option value="{{key}}">{{name}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
             <h2>{{localize "DICESONICE.settingsPerformance"}}</h2>
             <div class="form-group">
                 <label>{{localize "DICESONICE.shadowQuality"}}</label>
