--- a/module/templates/dice-config.html
+++ b/module/templates/dice-config.html
@@ -57,6 +57,16 @@
             </div>
 
             <div class="form-group">
+                <label>Crit Image</label><!-- TODO localize -->
+                <div class="form-fields">
+                    <button type="button" class="file-picker" data-type="image" data-target="critImage" title="Browse Files" tabindex="-1">
+                      <i class="fas fa-file-import fa-fw"></i>
+                    </button>
+                    <input class="image" type="text" name="critImage" placeholder="path/image.png" value="{{critImage}}"/>
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label>{{localize "DICESONICE.labelColor"}}</label>
                 <div class="form-fields">
                     <input type="text" name="labelColor" value="{{labelColor}}" data-dtype="String" />
